modules/gdscript/tests/scripts/runtime/errors/for_loop_typed_iterator_assign_line.gd
# GH-92681

func test():
	var a = [1, 2, "3"]
	for x: int in a: # The error should be here.
		print(x) # Not here.
